# TrabalhoATC

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  TrabalhoATC.sln
TrabalhoATC/: Character.h  Colliders.cpp  Colliders.h  Dot.h  Dots.h  Entity.h  Fruit.h  Game.h  Ghost.h  Ghosts.cpp  Ghosts.h  Pacman.h  RenderRegion.cpp  RenderRegion.h  Sprite.h  TrabalhoATC.cpp  TrabalhoATC.vcxproj  TrabalhoATC.vcxproj.filters  UI.cpp  data_types.h
TrabalhoATC/externo/: GameLogic.cpp  Map.cpp
TrabalhoATC/include/lib/: pdcurses.lib
src/: Character.cpp  Character.h  Game.cpp  Game.h  GameLogic.cpp  GameLogic.h  GameScreen.cpp  Ghost.cpp  Ghost.h  Map.cpp  Map.h  PacMan.cpp  PacMan.h  RenderRegion.cpp  RenderRegion.h  TrabalhoPacMan.cpp  TrabalhoPacMan.h  UI.h  data_types.h  teste.cpp
